# polymarket-bot-lab

./: .gitignore  CITATION.cff  DATASET.md  LICENSE  NOTICE  README.md  SECURITY_AUDIT.md  alembic.ini  decision_ledger.md  pyproject.toml
audit/: security-audit-2026-04-18.md
bots/: notify_daemon.py  watchdog_daemon.py
core/: __init__.py  backtest.py  backtest_bot_a.py  backtest_bot_c.py  backtest_bot_d.py  backtest_bot_e.py  backtest_db.py  bot_g_live_probe.py  bot_registry.py  cex_ws.py  clob.py  clob_v2.py  config.py  crowd_signals.py  db.py  emergency_halt.py  exec_policy.py  fees.py  fleet.py  ingest.py  keystore.py  notify.py  polymarket_v2.py  polymarket_ws.py  portfolio.py  pyth_feeds.py  pyth_ingest.py  pyth_models.py  rewards_monitor.py  sd_notify.py  tiny_live_probe.py  watchdog.py
dashboard/: runtime_queries.py  server.py
docs/: GROK_OVERNIGHT_ACCEPTANCE_CRITERIA_2026-05-18.md  GROK_OVERNIGHT_IMPLEMENTATION_SPEC_2026-05-18.md  NAMING.md  PROJECT-HISTORY.md  active-operating-model-2026-05-02.md  architecture-decision.md  backlog.md  backtest-three-methods-2026-04-20.md  bot-a-walkforward-wangzj-2026-04-18.md  bot-b-calibration-deepseek-v3-2026-04-17.md  bot-b-calibration-groq-qwen3-2026-04-17.md  bot-b-calibration-ollama-kimi-2026-04-17.md  bot-b-reference.md  bot-c-pyth-build-log.md  bot-c-review-gemini-flash.md  bot-c-review-glm-5.1.md  bot-c-strategy-review-synthesis.md  bot-c-thesis.md  bot-c-tickstream-migration-plan.md  bot-d-maker-live-probe-2026-05-15.md  bot-d-tiny-live-runbook-2026-05-03.md  bot-d-weather-edge-verification-brief-2026-04-29.md  bot-e-calibration-report.md  bot-e-fill-conditioned-replay-plan-2026-05-03.md  bot-e-model-replacement-plan.md  bot-e-peer-review.md  bot-e-phase1-ml-verdict-2026-04-18.md  bot-e-poc-results.md  bot-e-recorder-vps-canary-rollover-design-2026-05-10.md  bot-e-spec.md  bot-f-demotion-plan.md  bot-f-ideas.md  (+41 more)
(+417 files in other folders)
